[package]
name = "kser"
version = "0.1.0"
authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
edition = "2018"

[dependencies]
cdumay_error = { git = "https://github.com/cdumay/cdumay-errors-rs" , features = ["http"] }
cdumay_job = { git = "https://github.com/cdumay/cdumay-job-rs" }
cdumay_result = { git = "https://github.com/cdumay/cdumay-result-rs", features = ["cdumay-error"] }
futures = "0.1"
log = "0.4"
rdkafka = { version = "0.17", features = ["ssl", "sasl"]}
rdkafka-sys = "0.11.4-0"
serde_json = "1.0"
